# supply-mind

./: .gitignore  CONTRIBUTING.md  README.md  docker-compose.yaml  pyproject.toml
configs/: litellm.yaml  temporal-dynamic-config.yaml  temporal.yaml
models/: anomaly_detector.json  anomaly_encoders.pkl  forecaster_encoders.pkl  forecaster_model.json  model_documentation.md
multi_agents/: main.py
multi_agents/agents/: supervisor.py  toolkits.py
multi_agents/agents/prompts/: assessment_agent.py  report_generation.py  supplier_analysis.py
multi_agents/agents/schemas/: sku_graph_input.py  supplier_request_input.py
multi_agents/agents/workers/: inventory_optimization_agent.py  orders_and_returns_agent.py
multi_agents/agents/workers/sub_agent/: assessment_agent.py  reorder_assessment_agent.py  (+3 more)
multi_agents/guardrails/input/: email_guard.py
multi_agents/guardrails/output/: assessment_guard.py
multi_agents/prompts/: email_guard_prompts.py  order_and_returns.py  reorder_assessment.py  report_generation.py  supervisor.py  supplier_analysis.py
multi_agents/temporal/: workflow.py
multi_agents/temporal/activities/: run_supervisor.py
multi_agents/tools/: anomaly.py  db.py  file.py  forecast.py  gmail.py  search.py
multi_agents/tools/reports/: graph.py  html.py
multi_agents/tools/schemas/: anomaly.py  db.py  file.py  gmail.py  graph.py  search.py
multi_agents/utils/: db.py  file.py  helper.py  llm_inference.py  logger.py
scripts/: data_generator.py  ddl.sql  dml.py  dml.sql  init_db.py  train_anomaly_detector.py  train_forecaster.py
