[tool.poetry]
name = "supply-mind"
version = "0.1.0"
description = ""
authors = ["kausthub-kannan <kausthubkannan961@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.14"
fastapi = "^0.135.3"
uvicorn = "^0.43.0"
autogen = "^0.11.4"
litelm = "^0.4.0"
agentops = "^0.4.21"
langchain = "^1.2.15"
langgraph = "^1.1.5"
sqlalchemy = "^2.0.49"
temporalio = "^1.24.0"
minio = "^7.2.20"
psycopg2-binary = "^2.9.11"
scipy = "^1.17.1"
prophet = "^1.3.0"
pandas = "^3.0.2"
scikit-learn = "^1.8.0"
langchain-core = "^1.2.28"
tavily = "^1.1.0"
boto3 = "^1.42.89"
plotly = "^6.7.0"
langchain-openai = "^1.1.13"


[tool.poetry.group.dev.dependencies]
ruff = "^0.15.9"
black = "^26.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
